--- a/index.html
+++ b/index.html
@@ -14,7 +14,15 @@
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
 	<link rel="stylesheet" type="text/css" href="css/addresspicker.css" />
 	<script src="http://maps.google.com/maps/api/js"></script>
+	
 	<script language="javascript" type="text/javascript" src="js/jquery-1.11.3.min.js"></script>	
+<script>
+    $(document).bind('mobileinit',function(){
+        $.mobile.changePage.defaults.changeHash = false;
+        $.mobile.hashListeningEnabled = false;
+        $.mobile.pushStateEnabled = false;
+    });
+</script> 
 	<script language="javascript" type="text/javascript" src="js/jquery.mobile-1.4.5.min.js"></script>
 	<script language="javascript" type="text/javascript" src="js/jquery.validate.js"></script>
 	<script language="javascript" type="text/javascript" src="js/additional-methods.js"></script>
@@ -35,7 +43,7 @@
 			<img src="img/logo_end.png" title="logo"/>
 			<p>Thanks for reporting acanthaster in Fidji !</p>
 			<p><a onclick="return app.reloadForm()">Report more acanthasters</a></p>
-			<p><a href="http://oreanet.ird.nc">Visit Oreanet FJ website</a></p>
+			<p><a href="http://oreanet-fj.ird.nc">Visit Oreanet FJ website</a></p>
 		    </div>
 		</div>
             </div>
@@ -226,7 +234,7 @@
 		</div>
             </div>
 	
-	<script language="javascript" type="text/javascript" src="cordova.js"></script>
+	
         <script language="javascript" type="text/javascript" src="js/index.js"></script>
 	<script language="javascript" type="text/javascript" src="js/sql.js"></script>
         <script language="javascript" type="text/javascript" src="js/dbutils.js"></script>
