--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
 	<link rel="stylesheet" type="text/css" href="css/addresspicker.css" />
 	<script src="http://maps.google.com/maps/api/js"></script>
-	<script language="javascript" type="text/javascript" src="js/jquery-1.11.3.min.js"></script>	
+	<script language="javascript" type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
+	
 	<script language="javascript" type="text/javascript" src="js/jquery.mobile-1.4.5.min.js"></script>
 	<script language="javascript" type="text/javascript" src="js/jquery.validate.js"></script>
 	<script language="javascript" type="text/javascript" src="js/additional-methods.js"></script>
@@ -28,6 +29,11 @@
 		    <div class="splashscreen col-xs-12 col-sm-12 col-md-6 col-md-offset-3">
 			<img src="img/logo.png" title="logo"/>
 			<p class="blink">Connecting</p>
+		    </div>
+		</div>
+		<div class="event onsend row vertical-align">
+		    <div class="splashscreen col-xs-12 col-sm-12 col-md-6 col-md-offset-3">			
+			<p class="blink">Sending report</p>
 		    </div>
 		</div>
 		<div class="event onclose row vertical-align">
@@ -211,7 +217,7 @@
 					<select id="observation_state" name="observation_state" size="1">
 					    <option value="low">Low or to be confirmed</option>
 					    <option value="medium">Medium</option>
-					    <option value="hight">Hight</option>
+					    <option value="high">High</option>
 					</select> 
 				    </div>
 				   
