feat(sending): correct infest level

--- a/index.html
+++ b/index.html
@@ -215,9 +215,9 @@
 				    <div data-role="fieldcontain" class="ui-hide-label">
 					<label for="observation_state" class="select">Acanthasters impact</label>
 					<select id="observation_state" name="observation_state" size="1">
-					    <option value="low">Low or to be confirmed</option>
-					    <option value="medium">Medium</option>
-					    <option value="high">High</option>
+					    <option value="Low">Low or to be confirmed</option>
+					    <option value="Medium">Medium</option>
+					    <option value="High">High</option>
 					</select> 
 				    </div>
 				   
