--- a/index.html
+++ b/index.html
@@ -8,19 +8,18 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height" />
 	<!--<meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com; style-src 'self' 'unsafe-inline'; media-src *">-->
 	
-        <link rel="stylesheet" type="text/css" href="css/index.css" />
+         <link rel="stylesheet" type="text/css" href="css/index.css" />
 	<link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.4.5.min.css" />
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
 	<link rel="stylesheet" type="text/css" href="css/addresspicker.css" />
 	<script src="http://maps.google.com/maps/api/js"></script>
-	<script language="javascript" type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
+	<script language="javascript" type="text/javascript" src="js/jquery-1.11.3.min.js"></script>	
 	
-	<script language="javascript" type="text/javascript" src="js/jquery.mobile-1.4.5.min.js"></script>
 	<script language="javascript" type="text/javascript" src="js/jquery.validate.js"></script>
 	<script language="javascript" type="text/javascript" src="js/additional-methods.js"></script>
 	<script language="javascript" type="text/javascript" src="js/bootstrap.min.js"></script>	
-        <title>Oreanet FJ</title>
+        <title>Oreanet VT</title>
     </head>
     <body>
         <div class="app">            
@@ -39,9 +38,9 @@
 		<div class="event onclose row vertical-align">
 		    <div class="thankyoupage col-md-4 col-md-offset-4">
 			<img src="img/logo_end.png" title="logo"/>
-			<p>Thanks for reporting acanthaster in Fidji !</p>
+			<p>Thanks for reporting acanthaster in Vanuatu !</p>
 			<p><a onclick="return app.reloadForm()">Report more acanthasters</a></p>
-			<p><a href="http://oreanet-fj.ird.nc">Visit Oreanet FJ website</a></p>
+			<p><a href="http://fisheries.gov.vu/index.php/crowns-of-thorns">Visit Vanuatu Fisheries dept. website</a></p>
 		    </div>
 		</div>
             </div>
@@ -81,7 +80,7 @@
 				    	    <div class="collapse navbar-collapse navbar-left col-md-4" id="navbar-collapse-1">
 				     		 <ul class="nav navbar-nav">
 						    <li><a href="#" onclick="return app.showInfoMsg()" data-toggle="collapse" data-target="#navbar-collapse-1.in">Info</a></li>
-						    <li><a href="http://oreanet-fj.ird.nc" data-toggle="collapse" data-target="#navbar-collapse-1.in">Visit website</a></li>
+						    <li><a href="http://fisheries.gov.vu/index.php/crowns-of-thorns" data-toggle="collapse" data-target="#navbar-collapse-1.in">Visit website</a></li>
 				      		</ul>
 				    	    </div>
 				    	<!--/.nav-collapse -->
@@ -232,7 +231,7 @@
 		</div>
             </div>
 	
-	<script language="javascript" type="text/javascript" src="cordova.js"></script>
+	<!--script language="javascript" type="text/javascript" src="cordova.js"></script-->
         <script language="javascript" type="text/javascript" src="js/index.js"></script>
 	<script language="javascript" type="text/javascript" src="js/sql.js"></script>
         <script language="javascript" type="text/javascript" src="js/dbutils.js"></script>
