--- a/index.html
+++ b/index.html
@@ -8,18 +8,19 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height" />
 	<!--<meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com; style-src 'self' 'unsafe-inline'; media-src *">-->
 	
-         <link rel="stylesheet" type="text/css" href="css/index.css" />
+        <link rel="stylesheet" type="text/css" href="css/index.css" />
 	<link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.4.5.min.css" />
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
 	<link rel="stylesheet" type="text/css" href="css/addresspicker.css" />
 	<script src="http://maps.google.com/maps/api/js"></script>
-	<script language="javascript" type="text/javascript" src="js/jquery-1.11.3.min.js"></script>	
+	<script language="javascript" type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
 	
+	<script language="javascript" type="text/javascript" src="js/jquery.mobile-1.4.5.min.js"></script>
 	<script language="javascript" type="text/javascript" src="js/jquery.validate.js"></script>
 	<script language="javascript" type="text/javascript" src="js/additional-methods.js"></script>
 	<script language="javascript" type="text/javascript" src="js/bootstrap.min.js"></script>	
-        <title>Oreanet VT</title>
+        <title>Oreanet FJ</title>
     </head>
     <body>
         <div class="app">            
@@ -231,7 +232,7 @@
 		</div>
             </div>
 	
-	<!--script language="javascript" type="text/javascript" src="cordova.js"></script-->
+	<script language="javascript" type="text/javascript" src="cordova.js"></script>
         <script language="javascript" type="text/javascript" src="js/index.js"></script>
 	<script language="javascript" type="text/javascript" src="js/sql.js"></script>
         <script language="javascript" type="text/javascript" src="js/dbutils.js"></script>
