fix(logo): remove minion

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		</div>
 		<div class="event onclose row vertical-align">
 		    <div class="thankyoupage col-md-4 col-md-offset-4">
-			<img src="img/logo_end.png" title="logo"/>
+			<img src="img/logo.png" title="logo"/>
 			<p>Thanks for reporting acanthaster in Vanuatu !</p>
 			<p><a onclick="return app.reloadForm()">Report more acanthasters</a></p>
 			<p><a href="http://fisheries.gov.vu/index.php/crowns-of-thorns">Visit Vanuatu Fisheries dept. website</a></p>
