--- a/list.html
+++ b/list.html
@@ -47,7 +47,7 @@
 					      		<span class="icon-bar"></span>
 					    	    </button>
 					    	    <div class="navbar-header col-xs-4 col-sm-4 col-md-5">
-					      	    	<a class="navbar-brand" rel="home" href="#" title="Home"> Report Acantasthers</a>
+					      	    	<a class="navbar-brand" rel="home" href="#" title="Home"> Report Acanthasters</a>
 					    	    </div>
 					    	    <!-- Non-collapsing right-side icons -->
 					    	    <ul class="nav navbar-nav navbar-right col-xs-4 col-sm-3 col-md-2">
@@ -82,8 +82,8 @@
 		    		<table id="cot_list" class=cot_list_forms>
 
 		    			<tr>
-		    				<th>Date creation</th>
-		    				<th><span>Date</span></th>
+		    				<th>Date of creation</th>
+		    				<th><span>Date of observation</span></th>
 		    				<th>Nbr COTS</th>
 		    				<th>Place</th>
 		    				<th>Delete</th>
