Ajout listes formulaires non termines

--- a/list.html
+++ b/list.html
@@ -51,25 +51,19 @@
 					    	    </div>
 					    	    <!-- Non-collapsing right-side icons -->
 					    	    <ul class="nav navbar-nav navbar-right col-xs-4 col-sm-3 col-md-2">
-					      		<li>
-							    <a href="#" onclick="return app.submitForm()" id="btn-send" class="fa fa-paper-plane col-xs-3"></a>
-					      		</li>
-					      		<li id="li-list">
-							    <a href="#" onclick="return app.reloadForm()" class="fa fa-refresh col-xs-3"></a>
-					      		</li>
-					      		<li id="online">
-					      			<p> Online </p>
-					      		</li>
-					      		<li id="offline">
-					      			<p> Offline </p>
-					      		</li>
+						      		<li id="online">
+						      			<p> Online </p>
+						      		</li>
+						      		<li id="offline">
+						      			<p> Offline </p>
+						      		</li>
 					    	    </ul>
 					    	    <!-- the collapsing menu -->
 					    	    <div class="collapse navbar-collapse navbar-left col-md-4" id="navbar-collapse-1">
-					     		 <ul class="nav navbar-nav">
-							    <li><a href="#" onclick="return app.showInfoMsg()" data-toggle="collapse" data-target="#navbar-collapse-1.in">Info</a></li>
-							    <li><a href="http://fisheries.gov.vu/" data-toggle="collapse" data-target="#navbar-collapse-1.in">Visit website</a></li>
-					      		</ul>
+						     		<ul class="nav navbar-nav">
+									    <li><a href="#" onclick="return app.showInfoMsg()" data-toggle="collapse" data-target="#navbar-collapse-1.in">Info</a></li>
+									    <li><a href="http://fisheries.gov.vu/index.php/crowns-of-thorns" data-toggle="collapse" data-target="#navbar-collapse-1.in">Visit website</a></li>
+						      		</ul>
 					    	    </div>
 					    	<!--/.nav-collapse -->
 					  	</div>
@@ -84,8 +78,8 @@
 		    			<tr>
 		    				<th>Date of creation</th>
 		    				<th><span>Date of observation</span></th>
-		    				<th>Nbr COTS</th>
-		    				<th>Place</th>
+		    				<th>Nbr of COTS</th>
+		    				<th>Location</th>
 		    				<th>Delete</th>
 		    				<th>Finalize</th>
 		    			</tr>
