Ajout listes formulaires non termines

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						<p id="msg-fin-enregistre">Thanks for reporting acanthaster in Vanuatu</p>
 						<p><a id="lien-reload" href="#" onclick="return app.reloadForm()">Report more acanthasters</a></p>
 						<p><a id="lien-site-web" href="http://fisheries.gov.vu/">Visit Vanuatu Fisheries dept. website</a></p>
-						<p><a href="#" onclick="return app.getFormID(''); navigator.app.exitApp();">Exit</a></p>
+						<p><a href="#" onclick="navigator.app.exitApp(); return app.reloadForm();">Exit</a></p>
 				    </div>
 				</div>
 	        </div>
