Ajout listes formulaires non termines

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						<img src="img/logo.png" title="logo"/>
 						<p id="msg-fin-enregistre">Thanks for reporting acanthaster in Vanuatu</p>
 						<p><a id="lien-reload" href="#" onclick="return app.reloadForm()">Report more acanthasters</a></p>
-						<p><a id="lien-site-web" href="http://fisheries.gov.vu/">Visit Vanuatu Fisheries dept. website</a></p>
+						<p><a id="lien-site-web" href="http://fisheries.gov.vu/index.php/crowns-of-thorns">Visit Vanuatu Fisheries dept. website</a></p>
 						<p><a href="#" onclick="navigator.app.exitApp(); return app.reloadForm();">Exit</a></p>
 				    </div>
 				</div>
@@ -96,7 +96,7 @@
 						    	<a href="#" onclick="return app.showInfoMsg()" data-toggle="collapse" data-target="#navbar-collapse-1.in">Info</a>
 						    </li>
 						    <li id="lien-site-menu">
-						    	<a href="http://fisheries.gov.vu/" data-toggle="collapse" data-target="#navbar-collapse-1.in">Visit website</a>
+						    	<a href="http://fisheries.gov.vu/index.php/crowns-of-thorns" data-toggle="collapse" data-target="#navbar-collapse-1.in">Visit website</a>
 						    </li>
 				      		</ul>
 			    	    </div>
