Ajout listes formulaires non termines

--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@
 					    <label><span class="input-group-addon exergue"><span class="fa fa-calendar"></span> Date and place</span></label>	
 					    <div data-role="fieldcontain" class="ui-hide-label">
 						<label for="observation_date">Date</label>			
-							<input type="number" name="observation_day" id="observation_day" value="" placeholder="Day"/>
-					    	<input type="number" name="observation_month" id="observation_month" value="" placeholder="Month"/>
-					    	<input type="number" name="observation_year" id="observation_year" value="" placeholder="Year" required/>
+							<input onfocus="this.type='number'" name="observation_day" id="observation_day" value="" placeholder="Day"/>
+					    	<input onfocus="this.type='number'" name="observation_month" id="observation_month" value="" placeholder="Month"/>
+					    	<input onfocus="this.type='number'" name="observation_year" id="observation_year" value="" placeholder="Year" required/>
 					    </div>
 					    <div data-role="fieldcontain" class="ui-hide-label">
 						<label for="observer_location">Context</label>	
