--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	<link rel="stylesheet" type="text/css" href="css/addresspicker.css" />
 	<script src="http://maps.google.com/maps/api/js"></script>
 	<script language="javascript" type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
+	
 	<script language="javascript" type="text/javascript" src="js/jquery.mobile-1.4.5.min.js"></script>
 	<script language="javascript" type="text/javascript" src="js/jquery.validate.js"></script>
 	<script language="javascript" type="text/javascript" src="js/additional-methods.js"></script>
@@ -77,7 +78,7 @@
 			    	    <!-- Non-collapsing right-side icons -->
 			    	    <ul class="nav navbar-nav navbar-right col-xs-4 col-sm-3 col-md-2">
 				      		<li>
-						    	<a href="#" onclick="return app.submitForm()" id="btn-send" class="fa fa-paper-plane col-xs-3"></a>
+						    	<a href="#" onclick="return app.submitForm()" id="btn-send" class="fa fa-paper-plane col-xs-3 invalid"></a>
 				      		</li>
 				      		<li>
 						    	<a href="#" onclick="return app.getFormID('')" id="btn-reload" class="fa fa-refresh col-xs-3"></a>
