--- a/index.html
+++ b/index.html
@@ -15,11 +15,16 @@
 	<link rel="stylesheet" type="text/css" href="css/addresspicker.css" />
 	<script src="http://maps.google.com/maps/api/js"></script>
 	<script language="javascript" type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
-	
+	<script>
+    $(document).bind('mobileinit',function(){
+        $.mobile.changePage.defaults.changeHash = false;
+        $.mobile.hashListeningEnabled = false;
+        $.mobile.pushStateEnabled = false;
+    });
+	</script> 
 	<script language="javascript" type="text/javascript" src="js/jquery.mobile-1.4.5.min.js"></script>
 	<script language="javascript" type="text/javascript" src="js/jquery.validate.js"></script>
 	<script language="javascript" type="text/javascript" src="js/additional-methods.js"></script>
-	<script language="javascript" type="text/javascript" src="js/bootstrap.min.js"></script>	
         <title>Oreanet VT</title>
     </head>
     <body>
@@ -63,48 +68,27 @@
 		    <!-- page principale -->
 		    <div id="contentoff" class="container contenu">	    	
 			<div class="row">
-				<!--barre de navigation -->
-	 			<nav class="navbar navbar-default navbar-fixed-top custom-navbar" role="navigation">
-			        <div>
-			    	    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1">
-				      		<span class="sr-only">Toggle navigation</span>
-				      		<span class="icon-bar"></span>
-				      		<span class="icon-bar"></span>
-				      		<span class="icon-bar"></span>
-			    	    </button>
-			    	    <div class="navbar-header col-xs-4 col-sm-4 col-md-5">
-			      	    	<a class="navbar-brand" rel="home" href="#" title="Home"> Report Acanthasters</a>
-			    	    </div>
-			    	    <!-- Non-collapsing right-side icons -->
-			    	    <ul class="nav navbar-nav navbar-right col-xs-4 col-sm-3 col-md-2">
-				      		<li>
-						    	<a href="#" onclick="return app.submitForm()" id="btn-send" class="fa fa-paper-plane col-xs-3 invalid"></a>
-				      		</li>
-				      		<li>
-						    	<a href="#" onclick="return app.getFormID('')" id="btn-reload" class="fa fa-refresh col-xs-3"></a>
-				      		</li>
-				      		<li id="online">
-				      			<p> Online </p>
-				      		</li>
-				      		<li id="offline">
-				      			<p> Offline </p>
-				      		</li>
-			    	    </ul>
-			    	    <!-- the collapsing menu -->
-			    	    <div class="collapse navbar-collapse navbar-left col-md-4" id="navbar-collapse-1">
-				     		<ul class="nav navbar-nav">
-						    <li>
-						    	<a href="#" onclick="return app.showInfoMsg()" data-toggle="collapse" data-target="#navbar-collapse-1.in">Info</a>
-						    </li>
-						    <li id="lien-site-menu">
-						    	<a href="http://fisheries.gov.vu/index.php/crowns-of-thorns" data-toggle="collapse" data-target="#navbar-collapse-1.in">Visit website</a>
-						    </li>
-				      		</ul>
-			    	    </div>
-					    <!--/.nav-collapse -->
-					</div>
-					<!--/.container -->
-				</nav>  
+			<!-- navbar -->    	
+			<div class="row">
+				<nav class="navbar navbar-default navbar-fixed-top custom-navbar" role="navigation">
+					<div data-role="header">
+							<div id="navbar" data-role="collapsible" data-collapsed-icon="bars" data-expanded-icon="delete" class="ui-btn-left ui-mini">
+	    						<h6>Menu</h6>
+							    <ul data-role="listview">
+							    	<li><a href="#" onclick="return app.showInfoMsg()">Info</a></li>
+							    	<li id="lien-site-menu"><a href="http://fisheries.gov.vu/index.php/crowns-of-thorns">Visit website</a></li>
+					      		</ul>
+							</div>
+							<h1 class="ui-title">Report Acanthasters</h1>
+							<div data-role="controlgroup" data-type="horizontal" class="ui-mini ui-btn-right">
+								<button class="ui-btn ui-btn-icon-right fa fa-signal" id="onlinelist"></button>
+						        <button id="btn-refresh" onclick="return app.getFormID('')" class="ui-btn ui-btn-icon-right fa fa-refresh"></button>
+						        <button id="btn-send" onclick="return app.submitForm()" class="ui-btn ui-btn-icon-right fa fa-paper-plane invalid"></button>
+						    </div>
+					    </div>
+				</nav>
+			<!-- /navbar -->
+				
 				<!-- form -->	    
 			    <div class="col-lg-12">
 				<div class="cot_admin_edit front-end-edit">
@@ -135,9 +119,9 @@
 					    <label><span class="input-group-addon exergue"><span class="fa fa-calendar"></span> Date and place</span></label>	
 					    <div data-role="fieldcontain" class="ui-hide-label">
 						<label for="observation_date">Date</label>			
-							<input onfocus="this.type='number'" name="observation_day" id="observation_day" value="" placeholder="Day"/>
-					    	<input onfocus="this.type='number'" name="observation_month" id="observation_month" value="" placeholder="Month"/>
-					    	<input onfocus="this.type='number'" name="observation_year" id="observation_year" value="" placeholder="Year" required/>
+							<input type="number" name="observation_day" id="observation_day" value="" placeholder="Day"/>
+					    	<input type="number" name="observation_month" id="observation_month" value="" placeholder="Month"/>
+					    	<input type="number" name="observation_year" id="observation_year" value="" placeholder="Year" required/>
 					    </div>
 					    <div data-role="fieldcontain" class="ui-hide-label">
 						<label for="observer_location">Context</label>	
@@ -254,7 +238,7 @@
 			</div>
 	        </div>
 		</div>
-        <script language="javascript" type="text/javascript" src="cordova.js"></script>
+        <!--script language="javascript" type="text/javascript" src="cordova.js"></script-->
         <script language="javascript" type="text/javascript" src="js/index.js"></script>
 		<script language="javascript" type="text/javascript" src="js/sql.js"></script>
         <script language="javascript" type="text/javascript" src="js/dbutils.js"></script>
