--- a/list.html
+++ b/list.html
@@ -13,13 +13,15 @@
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
 	<link rel="stylesheet" type="text/css" href="css/addresspicker.css" />
-	<script src="http://maps.google.com/maps/api/js"></script>
 	<script language="javascript" type="text/javascript" src="js/jquery-1.11.3.min.js"></script>	
-	
+	<script>
+    $(document).bind('mobileinit',function(){
+        $.mobile.changePage.defaults.changeHash = false;
+        $.mobile.hashListeningEnabled = false;
+        $.mobile.pushStateEnabled = false;
+    });
+	</script> 
 	<script language="javascript" type="text/javascript" src="js/jquery.mobile-1.4.5.min.js"></script>
-	<script language="javascript" type="text/javascript" src="js/jquery.validate.js"></script>
-	<script language="javascript" type="text/javascript" src="js/additional-methods.js"></script>
-	<script language="javascript" type="text/javascript" src="js/bootstrap.min.js"></script>	
         <title>Oreanet VT</title>
     </head>
     <body>
@@ -36,40 +38,28 @@
 			</div>
 		    </div>
 		    <!-- page principale -->
-		    <div id="contentlist" class="container contenu">	    	
+		    <div id="contentlist" class="container contenu">	
+		    <!-- navbar -->    	
 			<div class="row">
-			<!--barre de navigation -->
-	 			<nav class="navbar navbar-default navbar-fixed-top custom-navbar" role="navigation">
-					        <div>
-					    	    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1">
-					      		<span class="sr-only">Toggle navigation</span>
-					      		<span class="icon-bar"></span>
-					      		<span class="icon-bar"></span>
-					      		<span class="icon-bar"></span>
-					    	    </button>
-					    	    <div class="navbar-header col-xs-4 col-sm-4 col-md-5">
-					      	    	<a class="navbar-brand" rel="home" href="#" title="Home"> Report Acanthasters</a>
-					    	    </div>
-					    	    <!-- Non-collapsing right-side icons -->
-					    	    <ul class="nav navbar-nav navbar-right col-xs-4 col-sm-3 col-md-2">
-						      		<li id="online">
-						      			<p> Online </p>
-						      		</li>
-						      		<li id="offline">
-						      			<p> Offline </p>
-						      		</li>
-					    	    </ul>
-					    	    <!-- the collapsing menu -->
-					    	    <div class="collapse navbar-collapse navbar-left col-md-4" id="navbar-collapse-1">
-						     		<ul class="nav navbar-nav">
-									    <li><a href="#" onclick="return app.showInfoMsg()" data-toggle="collapse" data-target="#navbar-collapse-1.in">Info</a></li>
-									    <li><a href="http://fisheries.gov.vu/index.php/crowns-of-thorns" data-toggle="collapse" data-target="#navbar-collapse-1.in">Visit website</a></li>
-						      		</ul>
-					    	    </div>
-					    	<!--/.nav-collapse -->
-					  	</div>
-					      <!--/.container -->
-				</nav>   
+				<nav class="navbar navbar-default navbar-fixed-top custom-navbar" role="navigation">
+					<div data-role="header">
+							<div id="navbar" data-role="collapsible" data-collapsed-icon="bars" data-expanded-icon="delete" class="ui-btn-left ui-mini">
+	    						<h6>Menu</h6>
+							    <ul data-role="listview">
+							    	<li><a href="#" onclick="return app.showInfoMsg()">Info</a></li>
+							    	<li id="lien-site-menu"><a href="http://fisheries.gov.vu/index.php/crowns-of-thorns">Visit website</a></li>
+					      		</ul>
+							</div>
+							<h1 class="ui-title">Report Acanthasters</h1>
+						    <div data-role="controlgroup" data-type="horizontal" class="ui-mini ui-btn-right">
+								<button class="ui-btn ui-btn-icon-right fa fa-signal" id="onlinelist"></button>
+						    </div>
+					    </div>
+				</nav>
+			</div>
+			<!-- /navbar -->
+			
+			<div class="row">	
 			     <!-- liste -->
 			    <div class="col-lg-12">
 				<div class="cot_admin_list front-end-edit">
@@ -91,7 +81,7 @@
 			</div>
 			</div>
     	</div>
-	<script language="javascript" type="text/javascript" src="cordova.js"></script>
+	<!--script language="javascript" type="text/javascript" src="cordova.js"></script-->
     <script language="javascript" type="text/javascript" src="js/index.js"></script>
 	<script language="javascript" type="text/javascript" src="js/sql.js"></script>
     <script language="javascript" type="text/javascript" src="js/dbutils.js"></script>
