remove dev code

--- a/list.html
+++ b/list.html
@@ -14,13 +14,6 @@
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
 	<link rel="stylesheet" type="text/css" href="css/addresspicker.css" />
 	<script language="javascript" type="text/javascript" src="js/jquery-1.11.3.min.js"></script>	
-	<script>
-    $(document).bind('mobileinit',function(){
-        $.mobile.changePage.defaults.changeHash = false;
-        $.mobile.hashListeningEnabled = false;
-        $.mobile.pushStateEnabled = false;
-    });
-	</script> 
 	<script language="javascript" type="text/javascript" src="js/jquery.mobile-1.4.5.min.js"></script>
         <title>Oreanet VT</title>
     </head>
@@ -81,7 +74,7 @@
 			</div>
 			</div>
     	</div>
-	<!--script language="javascript" type="text/javascript" src="cordova.js"></script-->
+	<script language="javascript" type="text/javascript" src="cordova.js"></script>
     <script language="javascript" type="text/javascript" src="js/index.js"></script>
 	<script language="javascript" type="text/javascript" src="js/sql.js"></script>
     <script language="javascript" type="text/javascript" src="js/dbutils.js"></script>
