--- a/index.html
+++ b/index.html
@@ -15,13 +15,7 @@
 	<link rel="stylesheet" type="text/css" href="css/addresspicker.css" />
 	<script src="http://maps.google.com/maps/api/js"></script>
 	<script language="javascript" type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
-	<script>
-		$(document).bind('mobileinit',function(){
-			$.mobile.changePage.defaults.changeHash = false;
-			$.mobile.hashListeningEnabled = false;
-			$.mobile.pushStateEnabled = false;
-		});
-	</script> 
+	
 	<script language="javascript" type="text/javascript" src="js/jquery.mobile-1.4.5.min.js"></script>
 	<script language="javascript" type="text/javascript" src="js/jquery.validate.js"></script>
 	<script language="javascript" type="text/javascript" src="js/additional-methods.js"></script>
@@ -238,7 +232,7 @@
 			</div>
 		</div>
 	</div>
-	<!--script language="javascript" type="text/javascript" src="cordova.js"></script-->
+	<script language="javascript" type="text/javascript" src="cordova.js"></script>
 	<script language="javascript" type="text/javascript" src="js/index.js"></script>
 	<script language="javascript" type="text/javascript" src="js/sql.js"></script>
 	<script language="javascript" type="text/javascript" src="js/dbutils.js"></script>
