--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<link rel="stylesheet" type="text/css" href="css/addresspicker.css" />
 	<script src="http://maps.google.com/maps/api/js"></script>
 	<script language="javascript" type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
-	
+
 	<script language="javascript" type="text/javascript" src="js/jquery.mobile-1.4.5.min.js"></script>
 	<script language="javascript" type="text/javascript" src="js/jquery.validate.js"></script>
 	<script language="javascript" type="text/javascript" src="js/additional-methods.js"></script>
@@ -66,6 +66,11 @@
 			<div class="row">
 				<nav class="navbar navbar-default navbar-fixed-top custom-navbar" role="navigation">
 					<div data-role="header">
+						<div data-role="controlgroup" data-type="horizontal" class="ui-mini ui-btn-right">
+							<button class="ui-btn ui-btn-icon-right fa fa-signal" id="onlinelist"></button>
+							<button id="btn-refresh" onclick="return app.getFormID('')" class="ui-btn ui-btn-icon-right fa fa-refresh"></button>
+							<button id="btn-send" onclick="return app.submitForm()" class="ui-btn ui-btn-icon-right fa fa-paper-plane invalid"></button>
+						</div>
 						<div id="navbar" data-role="collapsible" data-collapsed-icon="bars" data-expanded-icon="delete" class="ui-btn-left ui-mini">
 							<h6>Report Acanthasters</h6>
 							<ul data-role="listview">
@@ -73,160 +78,154 @@
 								<li id="lien-site-menu"><a href="http://fisheries.gov.vu/index.php/crowns-of-thorns">Visit website</a></li>
 							</ul>
 						</div>
-
-						<div data-role="controlgroup" data-type="horizontal" class="ui-mini ui-btn-right">
-							<button class="ui-btn ui-btn-icon-right fa fa-signal" id="onlinelist"></button>
-							<button id="btn-refresh" onclick="return app.getFormID('')" class="ui-btn ui-btn-icon-right fa fa-refresh"></button>
-							<button id="btn-send" onclick="return app.submitForm()" class="ui-btn ui-btn-icon-right fa fa-paper-plane invalid"></button>
-						</div>
 					</div>
 				</nav>
-			</div>
 			<!-- /navbar -->
 
 			<!-- form -->	    
-			<div class="row col-lg-10">
-				<div class="cot_admin_edit front-end-edit">
-					<div class="form">
+				<div class="col-lg-12">
+					<div class="cot_admin_edit front-end-edit">
+						<div class="form">
 
-						<form method="get" id="form-cot_admin" role="form">
+							<form method="get" id="form-cot_admin" role="form">
 
-							<!-- part I -->
-							<label><span class="input-group-addon exergue"><span class="fa fa-user"></span> Observer</span></label>
-
-							<div data-role="fieldcontain" class="ui-hide-label">
-								<label for="observer_name">Observer</label>	
-								<input type="text" name="observer_name" id="observer_name" value="" placeholder="Observer name" required/>
-								<span style="display:none;" >
-									<input type="text" id="id" name="id" readonly="readonly" value="" size="32"/>
-								</span>
-							</div>
-							<div data-role="fieldcontain" class="ui-hide-label">
-								<label for="observer_tel">Observer phone number</label>				    		
-								<input type="tel" name="observer_tel" id="observer_tel" value="" placeholder="Observer phone number"/>
-							</div>
-							<div data-role="fieldcontain" class="ui-hide-label">
-								<label for="observer_email">Email</label>			
-								<input type="email" name="observer_email" id="observer_email" value="" placeholder="Observer email" required/>
-							</div>
-
-							<!-- part II -->
-							<label><span class="input-group-addon exergue"><span class="fa fa-calendar"></span> Date and place</span></label>	
-							<div data-role="fieldcontain" class="ui-hide-label">
-								<label for="observation_date">Date</label>			
-								<input type="number" name="observation_day" id="observation_day" value="" placeholder="Day"/>
-								<input type="number" name="observation_month" id="observation_month" value="" placeholder="Month"/>
-								<input type="number" name="observation_year" id="observation_year" value="" placeholder="Year" required/>
-							</div>
-							<div data-role="fieldcontain" class="ui-hide-label">
-								<label for="observer_location">Context</label>	
-								<textarea name="observation_location" id="observation_location" placeholder="Observation context"></textarea>
-							</div>
-
-							<div id="offlineForm">
+								<!-- part I -->
+								<label><span class="input-group-addon exergue"><span class="fa fa-user"></span> Observer</span></label>
 
 								<div data-role="fieldcontain" class="ui-hide-label">
-									<label for="observer_localisation">Localization</label>		    		
-									<input type="text" id="observation_localisation" name="observation_localisation" value="" size="32" autocomplete="off" placeholder="Select localization on the map" required></input>
+									<label for="observer_name">Observer</label>	
+									<input type="text" name="observer_name" id="observer_name" value="" placeholder="Observer name" required/>
+									<span style="display:none;" >
+										<input type="text" id="id" name="id" readonly="readonly" value="" size="32"/>
+									</span>
 								</div>
 								<div data-role="fieldcontain" class="ui-hide-label">
-									<label for="observer_region">Region</label>	   		
-									<input type="text" name="observation_region" id="observation_region" value="" class="region form-control" placeholder="Region"/>
+									<label for="observer_tel">Observer phone number</label>				    		
+									<input type="tel" name="observer_tel" id="observer_tel" value="" placeholder="Observer phone number"/>
 								</div>
 								<div data-role="fieldcontain" class="ui-hide-label">
-									<label for="observer_pays">Country</label> 
-									<input type="text" name="observation_pays" id="observation_pays" value="" class="country form-control" placeholder="Country"/>
+									<label for="observer_email">Email</label>			
+									<input type="email" name="observer_email" id="observer_email" value="" placeholder="Observer email" required/>
+								</div>
+
+								<!-- part II -->
+								<label><span class="input-group-addon exergue"><span class="fa fa-calendar"></span> Date and place</span></label>	
+								<div data-role="fieldcontain" class="ui-hide-label">
+									<label for="observation_date">Date</label>			
+									<input type="number" name="observation_day" id="observation_day" value="" placeholder="Day"/>
+									<input type="number" name="observation_month" id="observation_month" value="" placeholder="Month"/>
+									<input type="number" name="observation_year" id="observation_year" value="" placeholder="Year" required/>
 								</div>
 								<div data-role="fieldcontain" class="ui-hide-label">
-									<label for="observer_latitude">Latitude</label>		 
-									<input type="text" name="observation_latitude" id="observation_latitude" value="" class="latitude form-control" placeholder="Latitude"/>
+									<label for="observer_location">Context</label>	
+									<textarea name="observation_location" id="observation_location" placeholder="Observation context"></textarea>
+								</div>
+
+								<div id="offlineForm">
+
+									<div data-role="fieldcontain" class="ui-hide-label">
+										<label for="observer_localisation">Localization</label>		    		
+										<input type="text" id="observation_localisation" name="observation_localisation" value="" size="32" autocomplete="off" placeholder="Select localization on the map" required></input>
+									</div>
+									<div data-role="fieldcontain" class="ui-hide-label">
+										<label for="observer_region">Region</label>	   		
+										<input type="text" name="observation_region" id="observation_region" value="" class="region form-control" placeholder="Region"/>
+									</div>
+									<div data-role="fieldcontain" class="ui-hide-label">
+										<label for="observer_pays">Country</label> 
+										<input type="text" name="observation_pays" id="observation_pays" value="" class="country form-control" placeholder="Country"/>
+									</div>
+									<div data-role="fieldcontain" class="ui-hide-label">
+										<label for="observer_latitude">Latitude</label>		 
+										<input type="text" name="observation_latitude" id="observation_latitude" value="" class="latitude form-control" placeholder="Latitude"/>
+									</div>
+									<div data-role="fieldcontain" class="ui-hide-label">
+										<label for="observer_longitude">Longitude</label>	
+										<input type="text" name="observation_longitude" id="observation_longitude" value="" class="longitude form-control" placeholder="Longitude"/>
+									</div>
+
+								</div>
+
+								<!-- part III -->
+								<label><span class="input-group-addon exergue"><span class="fa fa-eye"></span> Observed acanthasters</span></label>
+								<div data-role="fieldcontain" class="ui-hide-label">
+									<label for="observation_number">Number of acanthaster</label>				    
+									<input type="text" name="observation_number" id="observation_number" value="" placeholder="Number of acanthasters observed" required/>
 								</div>
 								<div data-role="fieldcontain" class="ui-hide-label">
-									<label for="observer_longitude">Longitude</label>	
-									<input type="text" name="observation_longitude" id="observation_longitude" value="" class="longitude form-control" placeholder="Longitude"/>
+									<label for="observer_culled">Acanthasters culled</label>				    		
+									<input type="text" name="observation_culled" id="observation_culled" value="" placeholder="Number of acanthasters culled"/>
 								</div>
 
-							</div>
+								<!-- part IV -->
+								<label><span class="input-group-addon exergue"><span class="fa fa-binoculars"></span> Observation method</span></label>	
+								<div data-role="fieldcontain" class="ui-hide-label">
+									<fieldset data-role="controlgroup">
+										<legend>Observation method</legend>
+										<input type="checkbox" name="observation_method0" id="observation_method0" value="snorkelling"/>
+										<label for="observation_method0">Snorkelling</label>
+										<input type="checkbox" name="observation_method1" id="observation_method1" value="scuba diving"/>
+										<label for="observation_method1">Scuba diving</label>
+									</fieldset>
+								</div>
 
-							<!-- part III -->
-							<label><span class="input-group-addon exergue"><span class="fa fa-eye"></span> Observed acanthasters</span></label>
-							<div data-role="fieldcontain" class="ui-hide-label">
-								<label for="observation_number">Number of acanthaster</label>				    
-								<input type="text" name="observation_number" id="observation_number" value="" placeholder="Number of acanthasters observed" required/>
-							</div>
-							<div data-role="fieldcontain" class="ui-hide-label">
-								<label for="observer_culled">Acanthasters culled</label>				    		
-								<input type="text" name="observation_culled" id="observation_culled" value="" placeholder="Number of acanthasters culled"/>
-							</div>
+								<!-- part V -->
+								<label><span class="input-group-addon exergue"><span class="fa fa-arrows-v"></span> Depth range</span></label>	
+								<div data-role="fieldcontain" class="ui-hide-label">
+									<fieldset data-role="controlgroup">
+										<legend>Depth range</legend>
+										<input type="checkbox" id="depth_range0" name="depth_range0" value="shallow">
+										<label for="depth_range0">Less than 2m</label>
+										<input type="checkbox" id="depth_range1" name="depth_range1" value="medium">
+										<label for="depth_range1">Between 2 and 10m</label>
+										<input type="checkbox" id="depth_range2" name="depth_range" value="deep">
+										<label for="depth_range2">More than 10m</label>
+									</fieldset>
+								</div>
 
-							<!-- part IV -->
-							<label><span class="input-group-addon exergue"><span class="fa fa-binoculars"></span> Observation method</span></label>	
-							<div data-role="fieldcontain" class="ui-hide-label">
-								<fieldset data-role="controlgroup">
-									<legend>Observation method</legend>
-									<input type="checkbox" name="observation_method0" id="observation_method0" value="snorkelling"/>
-									<label for="observation_method0">Snorkelling</label>
-									<input type="checkbox" name="observation_method1" id="observation_method1" value="scuba diving"/>
-									<label for="observation_method1">Scuba diving</label>
-								</fieldset>
-							</div>
+								<!-- part VI -->
+								<label><span class="input-group-addon exergue"><span class="fa fa-cogs"></span> Counting method</span></label>
+								<div data-role="fieldcontain" class="ui-hide-label">
+									<fieldset data-role="controlgroup" data-type="horizontal">
+										<legend>Counting method</legend>
+										<input type="checkbox" id="counting_method_timed_swim_chbx" name="counting_method_timed_swim_chbx" onclick="app.enable_timed_swim(this.checked)"></input>
+										<label for="counting_method_timed_swim_chbx">Timed swim</label>
+										<input type="checkbox" id="counting_method_distance_swim_chbx" name="counting_method_distance_swim_chbx" onclick="app.enable_distance_swim(this.checked)"></input>
+										<label for="counting_method_distance_swim_chbx">Distance swim</label>
+										<input type="checkbox" id="counting_method_other_chbx" name="counting_method_other_chbx" onclick="app.enable_other(this.checked)"></input>
+										<label for="counting_method_other_chbx">Other</label>
+									</fieldset>
+								</div>
 
-							<!-- part V -->
-							<label><span class="input-group-addon exergue"><span class="fa fa-arrows-v"></span> Depth range</span></label>	
-							<div data-role="fieldcontain" class="ui-hide-label">
-								<fieldset data-role="controlgroup">
-									<legend>Depth range</legend>
-									<input type="checkbox" id="depth_range0" name="depth_range0" value="shallow">
-									<label for="depth_range0">Less than 2m</label>
-									<input type="checkbox" id="depth_range1" name="depth_range1" value="medium">
-									<label for="depth_range1">Between 2 and 10m</label>
-									<input type="checkbox" id="depth_range2" name="depth_range" value="deep">
-									<label for="depth_range2">More than 10m</label>
-								</fieldset>
-							</div>
+								<div data-role="fieldcontain" class="ui-hide-label">
+									<label for="counting_method_timed_swim">Time</label>
+									<input type="text" name="counting_method_timed_swim" id="counting_method_timed_swim" value="" class="form-control" placeholder="Swimming time" readonly="readonly">
+								</div>
 
-							<!-- part VI -->
-							<label><span class="input-group-addon exergue"><span class="fa fa-cogs"></span> Counting method</span></label>
-							<div data-role="fieldcontain" class="ui-hide-label">
-								<fieldset data-role="controlgroup" data-type="horizontal">
-									<legend>Counting method</legend>
-									<input type="checkbox" id="counting_method_timed_swim_chbx" name="counting_method_timed_swim_chbx" onclick="app.enable_timed_swim(this.checked)"></input>
-									<label for="counting_method_timed_swim_chbx">Timed swim</label>
-									<input type="checkbox" id="counting_method_distance_swim_chbx" name="counting_method_distance_swim_chbx" onclick="app.enable_distance_swim(this.checked)"></input>
-									<label for="counting_method_distance_swim_chbx">Distance swim</label>
-									<input type="checkbox" id="counting_method_other_chbx" name="counting_method_other_chbx" onclick="app.enable_other(this.checked)"></input>
-									<label for="counting_method_other_chbx">Other</label>
-								</fieldset>
-							</div>
+								<div data-role="fieldcontain" class="ui-hide-label">
+									<label for="counting_method_distance_swim" class="ui-hidden-accessible">Distance</label>
+									<input type="text" name="counting_method_distance_swim" id="counting_method_distance_swim" value="" class="form-control" placeholder="Distance swim" readonly="readonly"></input>
+								</div>
 
-							<div data-role="fieldcontain" class="ui-hide-label">
-								<label for="counting_method_timed_swim">Time</label>
-								<input type="text" name="counting_method_timed_swim" id="counting_method_timed_swim" value="" class="form-control" placeholder="Swimming time" readonly="readonly">
-							</div>
+								<div data-role="fieldcontain" class="ui-hide-label">
+									<label for="counting_method_other" class="ui-hidden-accessible">Other</label>
+									<input type="text" name="counting_method_other" id="counting_method_other" value="" class="form-control" placeholder="Other" readonly="readonly"></input> 
+								</div>
 
-							<div data-role="fieldcontain" class="ui-hide-label">
-								<label for="counting_method_distance_swim" class="ui-hidden-accessible">Distance</label>
-								<input type="text" name="counting_method_distance_swim" id="counting_method_distance_swim" value="" class="form-control" placeholder="Distance swim" readonly="readonly"></input>
-							</div>
+								<!-- part VII -->
+								<label><span class="input-group-addon exergue"><span class="fa fa-comment"></span> Remarks</span></label>
+								<div data-role="fieldcontain" class="ui-hide-label">
+									<label for="remarks">Remarks</label>				    		
+									<textarea name="remarks" id="remarks" placeholder="Ex: living corals coverture, dead corals, bleaching, seeweeds…"></textarea>
+								</div>
 
-							<div data-role="fieldcontain" class="ui-hide-label">
-								<label for="counting_method_other" class="ui-hidden-accessible">Other</label>
-								<input type="text" name="counting_method_other" id="counting_method_other" value="" class="form-control" placeholder="Other" readonly="readonly"></input> 
-							</div>
+								<!-- part VIII -->
+								<div id="btn-cancel">
+									<button onclick="return app.saveForm()">Save and back to saved forms</button>
+								</div>
 
-							<!-- part VII -->
-							<label><span class="input-group-addon exergue"><span class="fa fa-comment"></span> Remarks</span></label>
-							<div data-role="fieldcontain" class="ui-hide-label">
-								<label for="remarks">Remarks</label>				    		
-								<textarea name="remarks" id="remarks" placeholder="Ex: living corals coverture, dead corals, bleaching, seeweeds…"></textarea>
-							</div>
-
-							<!-- part VIII -->
-							<div id="btn-cancel">
-								<button onclick="return app.saveForm()">Save and back to saved forms</button>
-							</div>
-
-						</form>
+							</form>
+						</div>
 					</div>
 				</div>
 			</div>
