--- a/index.html
+++ b/index.html
@@ -220,8 +220,8 @@
 								</div>
 
 								<!-- part VIII -->
-								<div id="btn-cancel">
-									<button onclick="return app.saveForm()">Save and back to saved forms</button>
+								<div id="btn-cancel" style="display:none;">
+									<button onclick="return app.cancel()">Back to list</button>
 								</div>
 
 							</form>
