change reload for offline

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 					<div data-role="header">
 						<div data-role="controlgroup" data-type="horizontal" class="ui-mini ui-btn-right">
 							<button class="ui-btn ui-btn-icon-right fa fa-signal" id="onlinelist"></button>
-							<button id="btn-refresh" onclick="return app.getFormID('')" class="ui-btn ui-btn-icon-right fa fa-refresh"></button>
+							<button id="btn-refresh" onclick="return app.reloadForm()" class="ui-btn ui-btn-icon-right fa fa-refresh"></button>
 							<button id="btn-send" onclick="return app.submitForm()" class="ui-btn ui-btn-icon-right fa fa-paper-plane invalid"></button>
 						</div>
 						<div id="navbar" data-role="collapsible" data-collapsed-icon="bars" data-expanded-icon="delete" class="ui-btn-left ui-mini">
