Ajout class checkbox

--- a/index.html
+++ b/index.html
@@ -163,9 +163,9 @@
 									<fieldset data-role="controlgroup">
 										<legend>Observation method</legend>
 										<input type="checkbox" name="observation_method0" id="observation_method0" value="snorkelling"/>
-										<label for="observation_method0">Snorkelling</label>
+										<label for="observation_method0" id="label_observation_method0">Snorkelling</label>
 										<input type="checkbox" name="observation_method1" id="observation_method1" value="scuba diving"/>
-										<label for="observation_method1">Scuba diving</label>
+										<label for="observation_method1" id="label_observation_method1">Scuba diving</label>
 									</fieldset>
 								</div>
 
@@ -175,11 +175,11 @@
 									<fieldset data-role="controlgroup">
 										<legend>Depth range</legend>
 										<input type="checkbox" id="depth_range0" name="depth_range0" value="shallow">
-										<label for="depth_range0">Less than 2m</label>
+										<label for="depth_range0" id="label_depth_range0">Less than 2m</label>
 										<input type="checkbox" id="depth_range1" name="depth_range1" value="medium">
-										<label for="depth_range1">Between 2 and 10m</label>
+										<label for="depth_range1" id="label_depth_range1">Between 2 and 10m</label>
 										<input type="checkbox" id="depth_range2" name="depth_range" value="deep">
-										<label for="depth_range2">More than 10m</label>
+										<label for="depth_range2" id="label_depth_range2">More than 10m</label>
 									</fieldset>
 								</div>
 
