save + gps + focus

--- a/index.html
+++ b/index.html
@@ -220,9 +220,10 @@
 								</div>
 
 								<!-- part VIII -->
-								<div id="btn-cancel" style="display:none;">
-									<button onclick="return app.cancel()">Back to list</button>
-								</div>
+								<div id="btns-cancel-save">
+				    				<button id="btn-cancel" style="display:none;" href="#" onclick="return app.cancel()">Back to the list</button>
+				    				<button id="btn-save" style="display:none;" href="#" onclick="return app.saveForm()">Save</button>
+				    			</div>
 
 							</form>
 						</div>
