--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 			</div>
 		</div>
 	</div>
-	<!--<script language="javascript" type="text/javascript" src="cordova.js"></script>-->
+	<script language="javascript" type="text/javascript" src="cordova.js"></script>
 	<script language="javascript" type="text/javascript" src="js/index.js"></script>
 	<script language="javascript" type="text/javascript" src="js/sql.js"></script>
 	<script language="javascript" type="text/javascript" src="js/dbutils.js"></script>
