--- a/index.html
+++ b/index.html
@@ -10,13 +10,16 @@
 	
 	<link rel="stylesheet" type="text/css" href="css/index.css" />
 	<link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.4.5.min.css" />
+	<link rel="stylesheet" type="text/css" href="css/jquery.mobile.datepicker.css" />
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
 	<link rel="stylesheet" type="text/css" href="css/addresspicker.css" />
 	<script src="http://maps.google.com/maps/api/js"></script>
+	<script language="javascript" type="text/javascript" src="js/conf.js"></script>
 	<script language="javascript" type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
-	
 	<script language="javascript" type="text/javascript" src="js/jquery.mobile-1.4.5.min.js"></script>
+	<script language="javascript" type="text/javascript" src="js/jquery.mobile.datepicker.js"></script>
+	<script language="javascript" type="text/javascript" src="js/jquery.ui.datepicker.js"></script>
 	<script language="javascript" type="text/javascript" src="js/jquery.validate.js"></script>
 	<script language="javascript" type="text/javascript" src="js/additional-methods.js"></script>
 	<title>Oreanet VT</title>
@@ -111,10 +114,8 @@
 								<!-- part II -->
 								<label><span class="input-group-addon exergue"><span class="fa fa-calendar"></span> Date and place</span></label>	
 								<div data-role="fieldcontain" class="ui-hide-label">
-									<label for="observation_date">Date</label>			
-									<input type="number" name="observation_day" id="observation_day" value="" placeholder="Day"/>
-									<input type="number" name="observation_month" id="observation_month" value="" placeholder="Month"/>
-									<input type="number" name="observation_year" id="observation_year" value="" placeholder="Year" required/>
+									<label for="observation_datetime">Date</label>			
+									<input name="observation_datetime" id="observation_datetime" placeholder="Date" data-role="date" type="text">
 								</div>
 								<div data-role="fieldcontain" class="ui-hide-label">
 									<label for="observer_location">Context</label>	
